src/test/ui/error-codes/E0277-3.rs
fn foo<T: PartialEq>(_: T) {}

struct S;

fn main() {
    foo(S);
    //~^ ERROR can't compare `S` with `S`
}
